fix: rename deployments into deployment

--- a/pages/deployment-setup.mdx
+++ b/pages/deployment-setup.mdx
@@ -17,7 +17,7 @@ run the build file
 yarn start
 ```
 
-listen to 3000 port (default) through PM2 service:
+listen to the 3000 port (default) through PM2 service:
 
 ```bash
 PORT=3000 pm2 start --name project_name yarn -- start
