--- a/pages/dashboard-codebase/get-started/utilities.mdx
+++ b/pages/dashboard-codebase/get-started/utilities.mdx
@@ -1,5 +1,5 @@
 # utils
 
 Any utilities should be made under shared/utils. If name of util is xyz:
-- Make the folder name xyz-utils and file inside that folder should be named xyz.util.ts
+- The folder is named xyz-utils and file inside that folder should is named xyz.util.ts
  (**Note**: The folder name has a dash and file name has dot in the name with the folder name being plural(utils) and file name being singular(util))
