--- a/pages/beer-app/get-started/gettingStarted.mdx
+++ b/pages/beer-app/get-started/gettingStarted.mdx
@@ -3,7 +3,7 @@
 ## Step 1: Clone the Base code repository
 Clone Repository
 ```js
- git clone git@repo.ekbana.info:frontend-v2/bootstrap-codebase.git
+ git clone git@github.com:mr339/cheers-beers.git
 ```
 IF using zipped file
 ```js
